Decode the first two fstab fields with strunvis(3). This allows having spaces in devices and mount paths, encoded as \s or \040.

PR:		bin/117687
Submitted by:	Martin Kammerhofer
Discussed on:	arch


git-svn-id: svn+ssh://svn.freebsd.org/base/head@241440 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f